[package]
name = "implot"
version = "0.7.0"
edition = "2018"
authors = ["Sandro Merkli", "implot-rs contributors"]
description = "Rust bindings to https://github.com/epezent/implot"
homepage = "https://github.com/4bb4/implot-rs"
repository = "https://github.com/4bb4/implot-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "README.md"

[dependencies]
implot-sys = { path = "implot-sys" }
imgui = { git = "https://github.com/JosiahWhite/imgui-rs.git", rev = "3fd1210456b94b6e8eb16ffa14ecca77faeb86e6", features = ["docking"] }
parking_lot = "0.11"
rustversion = "1.0.4"

[workspace]
members = [ "implot-sys" ]
exclude = [
    "implot-sys-bindgen",
    "implot-examples",
    "implot-wgpu-examples",
]
