[package]
name = "implot-sys"
version = "0.7.0"
edition = "2018"
authors = ["Sandro Merkli", "implot-rs contributors"]
description = "Raw FFI bindings to implot"
homepage = "https://github.com/4bb4/implot-rs"
repository = "https://github.com/4bb4/implot-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "external-ffi-bindings"]
build = "build.rs"
links = "implot"

[dependencies]
imgui-sys = { git = "https://github.com/JosiahWhite/imgui-rs.git", rev = "9b7fad059faa692de6e431ac55ee2690e216a6c7",  features = ["docking"] }
libc = "*"

[build-dependencies]
cc = "1.0"
